--- a/.env
+++ b/.env
@@ -14,7 +14,17 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=cba0a19a4214eda69f4d00f4443d4d93
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://krish:123@127.0.0.1:3306/lms_symfony_task?serverVersion=8.0.32&charset=utf8mb4"
+###< doctrine/doctrine-bundle ###
