--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.20",
         "sensio/framework-extra-bundle": "^6.2",
         "stof/doctrine-extensions-bundle": "*",
+        "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -22,6 +23,7 @@
         "symfony/security-csrf": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
+        "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "5.4.*",
         "twig/twig": "^3.0"
     },
